# BPI-W2-bsp

./: Makefile  README.md  build.sh  build_uboot_64.sh  configure  linux-kernel
linux-rt/: .gitignore  Makefile
linux-rt/drivers/: Kconfig  Makefile
linux-rt/fs/: block_dev.c  buffer.c
linux-rt/init/: main.c
linux-rt/kernel/: cpu.c  reboot.c
linux-rt/lib/: kobject_uevent.c  string.c
linux-rt/mm/: cma.c  memblock.c  shmem.c  sparse-vmemmap.c  vmalloc.c
linux-rtk/: Makefile
linux-rtk/crypto/: algboss.c  testmgr.c  testmgr.h
linux-rtk/drivers/: Kconfig  Makefile
linux-rtk/fs/: Kconfig  Makefile  timerfd.c
linux-rtk/init/: do_mounts.c  initramfs.c
linux-rtk/kernel/: cpu.c  fork.c  softirq.c  workqueue.c
linux-rtk/lib/: iomap.c  kobject_uevent.c  swiotlb.c
linux-rtk/mm/: memblock.c  memcontrol.c  page-writeback.c  page_alloc.c  swapfile.c
scripts/: bootloader.sh  dd_download.sh  install_kernel_headers.sh  mk_install_sd.sh  mk_pack.sh
toolchains/asdk64-4.9.4-a53-EL-3.10-g2.19-a64nt-160307/config/eglibc/localedef/: ChangeLog.eglibc  Makefile.in  asprintf.c  config.h.in  config.sub  configure  configure.ac  getdelim.c  localedef_extra.c  obstack_printf.c  vasprintf.c
toolchains/asdk64-4.9.4-a53-EL-3.10-g2.19-a64nt-160307/config/eglibc/localedef/include/: always.h  argp.h  byteswap.h  ctype.h  dirent.h  endian.h  error.h  exitfail.h  fcntl.h  features.h  getopt.h  getopt_int.h  gnu-versions.h  libc-internal.h  libintl.h  locale.h  mcheck.h  nl_types.h  obstack.h  regex.h  stdbool.h  stdint.h  stdio_ext.h  string.h  time.h  unistd.h  wctype.h
toolchains/asdk64-4.9.4-a53-EL-3.10-g2.19-a64nt-160307/config/eglibc/localedef/include/bits/: libc-tsd.h
toolchains/asdk64-4.9.4-a53-EL-3.10-g2.19-a64nt-160307/config/eglibc/localedef/include/gnu/: option-groups.h
toolchains/asdk64-4.9.4-a53-EL-3.10-g2.19-a64nt-160307/config/eglibc/localedef/include/intl/: loadinfo.h
toolchains/asdk64-4.9.4-a53-EL-3.10-g2.19-a64nt-160307/config/eglibc/localedef/include/sys/: cdefs.h  mman.h  param.h  stat.h  uio.h
toolchains/gcc-linaro-7.3.1-2018.05-x86_64_aarch64-linux-gnu/: gcc-linaro-7.3.1-2018.05-linux-manifest.txt
u-boot-rt/: Makefile  bpi-uimgz.sh  bpi-w2.sh  build_NAS_giraffe_a01_b00_all.sh  build_giraffe_a01_b00_all.sh  build_hercules_a00_all.sh  build_monarch.sh  build_spi_16MB_layout.sh  buildw2.sh
u-boot-rt/common/: Kconfig  Makefile  bootm.c  cli_hush.c  cmd_bdinfo_rtd161x.c  cmd_boot.c  cmd_bootm.c  cmd_eeprom.c  cmd_fastboot.c  cmd_fdt.c  cmd_nvedit.c  cmd_rpmb.c  cmd_rtkspi.c  cmd_uart_write.c  cmd_verify.c  env_common.c  env_factory.c  fdt_support.c  main.c  usb_hub.c  usb_storage.c
u-boot-rt/configs/: rtd1296_sd_bananapi_defconfig  rtd161x_fpga_defconfig
u-boot-rt/drivers/: Kconfig  Makefile
u-boot-rt/include/: bootm.h  common.h  config_defaults.h  dwc3-uboot.h  mmc.h  nand.h  rtc.h  search.h  serial.h  usb.h  usb_defs.h  watchdog.h
u-boot-rt/lib/: Kconfig  Makefile  hashtable.c
u-boot-rt/tools/: Makefile
u-boot-rtk/: Kconfig  Makefile  build_bananapi.sh
u-boot-rtk/arch/: Kconfig
u-boot-rtk/common/: Kconfig  Makefile  avb_verify.c  cli.c  cmd_avb.c  cmd_bdinfo.c  cmd_bdinfo_rtd1395.c  cmd_bdinfo_rtd161x.c  cmd_boot.c  cmd_boot_wd.c  cmd_bootm.c  cmd_burn.c  cmd_date.c  cmd_fdt.c  cmd_gpt.c  cmd_mmc.c  cmd_nand.c  cmd_net.c  cmd_nvedit.c  cmd_rpmb.c  cmd_rtkethspeed.c  cmd_rtklsadc.c  cmd_rtkpwm.c  cmd_rtkspi.c  cmd_sata.c  cmd_uart_read_write.c  cmd_uart_write.c  cmd_usb.c  cmd_version.c  customized_bootflow.c  customized_bootflow_rtd161x.c  fdt_support.c  image-fdt.c  image-fit.c  main.c  usb.c  usb_storage.c
u-boot-rtk/configs/: rtd1295_qa_NAS_defconfig  rtd1295_spi_16MB_defconfig  rtd1296_qa_NAS_defconfig  rtd1296_sd_bananapi_defconfig  rtd1395_emmc_bananapi_defconfig  rtd1395_nand_aarch32_defconfig  rtd1395_nand_aarch32_nemo_defconfig  rtd1395_nand_aarch32_nemo_st_defconfig  rtd1395_nand_armv7_defconfig  rtd1395_nand_defconfig  rtd1395_nand_nemo_defconfig  rtd1395_qa_aarch32_defconfig  rtd1395_qa_armv7_defconfig  rtd1395_qa_defconfig  rtd1395_sd_bananapi_defconfig  rtd1395_spi_bananapi_defconfig  rtd161x_emmc_nas_rtk_defconfig  rtd161x_nand_nas_rtk_defconfig  rtd161x_nand_rtk_aarch32_defconfig  rtd161x_nand_rtk_defconfig  rtd161x_qa_defconfig  rtd161x_qa_nas_rtk_defconfig  rtd161x_qa_rtk_defconfig  rtd161x_spi_nas_rtk_defconfig
u-boot-rtk/disk/: part.c
u-boot-rtk/drivers/: Kconfig  Makefile
(+3738 files in other folders)
